# Autogen_research_agent

./: .gitignore  pyproject.toml
src/research_agent/: agents.py  app.py  data_loader.py  pdf_parser.py  rag_api.py  schemas.py
vector_db/: index.faiss  index.pkl
