[project]
name = "research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen>=0.7.4",
    "python-dotenv>=1.0.1",
    "scholarly>=1.7.11",
    "streamlit>=1.42.1",
]

[project.scripts]
research-agent = "research_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
